# truelayer-pokedex

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: funtranslations_client.rs  lib.rs  main.rs  pokeapi_client.rs  startup.rs
src/models/: mod.rs  pokemon.rs
src/routes/: pokemon.rs
tests/: pokemon.rs
