[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokedex"

[dependencies]
actix-web = "4.0.0-beta.14"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"rustls-tls",
] }
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
actix-rt = "2"
wiremock = "0.5.8"
serde_json = "1.0.72"
tokio = { version = "1", features = ["rt", "macros"] }
